<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">
<!--    <com.chanchuan.kotlindemo.util.CirclePgBar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/et_hint"
        android:textSize="@dimen/sp_20" />

    <com.chanchuan.kotlindemo.util.EditTextWithDel
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/et_hint"
        android:singleLine="true"
        android:textSize="@dimen/sp_20"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:text="显示键盘" />

    <Button
        android:id="@+id/btn_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:text="隐藏键盘" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            style="@style/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/cb_text_A" />

        <CheckBox
            style="@style/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/cb_text_B" />

        <CheckBox
            style="@style/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/cb_text_C" />

        <CheckBox
            style="@style/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/cb_text_D" />

        <CheckBox
            style="@style/CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/cb_text_E" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/cb_text_A" />

            <RadioButton
                style="@style/CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cb_text_B" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/app_name" />

        <Switch
            android:id="@+id/st_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:switchPadding="@dimen/dp_10"
            android:text="@string/app_name" />


    </LinearLayout>
</LinearLayout>